--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "npm": "6.4.1"
   },
   "dependencies": {
-    "cloudinary": "^1.13.2",
+    "chart.js": "^2.8.0",
+    "cloudinary": "^1.14.0",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -36,6 +37,7 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
+    "mysql2": "^1.6.5",
     "pg": "^7.9.0",
     "sequelize": "^5.1.1",
     "sequelize-cli": "^5.4.0",
